--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 
+
 {% load static %}
 {% block css_files %}
-<link rel="stylesheet" href="{% static "challenges/challenges.css" %}">
+<link rel="stylesheet" href="{% static 'challenges/challenges.css' %}" />
+<link rel="stylesheet" href="{% static 'challenges/includes/header.css' %}" />
 {% endblock css_files %}
+
+
 
 {% block page_title %}
 
@@ -16,7 +20,7 @@ All challenges
     {% for month in months %}
     <li>
         
-        <a href="{% url 'month-challenge' month  %}">
+        <a href="{% url 'month-challenge' month %}">
                 {{month|title}} 
         </a>
     </li>
