--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,8 +1,9 @@
-{%extends "base.html"%}
+{% extends "base.html"%}
 
 {% load static %}
 {% block css_files %}
 <link rel="stylesheet" href="{%static "challenges/includes/header.css"%}">
+<link rel="stylesheet" href="{%static "challenges/challenge.css"%}">
 {% endblock css_files %}
 
 
@@ -19,7 +20,7 @@
     {% if text is not None  %}
     <h2>{{text}}</h2>
     {%else%}
-    <p>There is no challenge for {{month}} yet </p>
+    <p class='fallback'>There is no challenge for {{month}} yet </p>
 
     {%endif%}
 {%endblock content%}
